<resources>
    <string name="app_name">Vacation Planner</string>
    <string name="vacation_name">%s</string>
    <string name="vacation_dates">From %s to %s</string>
    <string name="excursion_name">Excursion Name</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="accommodations">Accommodations</string>
    <string name="vacation_planner">Vacation Planner</string>
    <string name="welcome_instructions">Touch the button below to begin planning your dream vacation!</string>
    <string name="get_started">Get Started</string>
    <string name="background_img_description">palm tree on tropical beach</string>
    <string name="fab_button_description">plus sign</string>
    <string name="excursions">Excursions</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="notify">Notify</string>
    <string name="search">Search</string>
    <string name="generate_report">Generate Report</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="create_sample_data">Create Sample Data</string>
    <string name="validate_password">"Password must be at least eight characters long, contain one lower case letter, one upper case letter, one number, and one special character"</string>
    <string name="username_password_incorrect">Username/Password incorrect!</string>
    <string name="report_title">Vacation Data Report</string>
    <string name="date_created">Date Created: %1$s</string>
    <string name="vacation_name_header">Vacation Name</string>
    <string name="start_date_header">Start Date</string>
    <string name="end_date_header">End Date</string>
    <string name="accommodations_header">Accommodations</string>
</resources>