<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:icon="@drawable/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notify"
        android:title="@string/notify"
        android:icon="@drawable/notify"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sample_excursions"
        android:title="@string/create_sample_data"
        app:showAsAction="never" />
</menu>