<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:fontFamily="@font/agbalumo"
        android:padding="20dp"
        android:text="@string/vacation_planner"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowRadius="50"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/welcome_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_instructions"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowRadius="40"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textSize="18sp"
        android:padding="20dp"
        android:backgroundTint="@color/dark_blue"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_instructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_img_description"
        android:src="@drawable/palm_beach_background"
        android:scaleType="centerCrop"
        android:elevation="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>